--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
 	"version": "0.0.1",
 	"engines": { "node": "*" },
 	"author": "Zebulon Young",
-	"description": "Node.js based web application infrastructure."
+	"description": "Node.js based web application infrastructure.",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/zebulonj/covalence"
+	}
 }
